# misgnros.github.io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: .buildinfo  conf.py  cv.md  ep_weakkim.md  gp_sph.md  index.html  index.md  interests.md  objects.inv  publications.md  searchindex.js  st_inhom.md
docs/_sources/: about.rst.txt  first-post.rst.txt  gp_sph.md.txt  index.rst.txt  second-post.rst.txt  st_inhom.md.txt  test.rst.txt
docs/_templates/: page.html
docs/blog/: index.html
docs/blog/2024/: index.html
docs/blog/archive/: index.html
docs/blog/author/: index.html
docs/blog/author/author1/: index.html
docs/blog/author/misgnros/: index.html
docs/blog/category/: index.html
docs/blog/category/math/: index.html
docs/blog/category/mathematics/: index.html
docs/blog/category/technical/: index.html
docs/blog/category/theory/: index.html
docs/blog/drafts/: index.html
docs/blog/language/: index.html
docs/blog/language/en/: index.html
docs/blog/language/english/: index.html
docs/blog/language/ja/: index.html
docs/blog/language/japanese/: index.html
docs/blog/location/: index.html
docs/blog/location/japan/: index.html
docs/blog/location/world/: index.html
docs/blog/tag/: index.html
docs/blog/tag/atag/: index.html
docs/blog/tag/github-pages/: index.html
docs/blog/tag/sphinx/: index.html
docs/blog/tag/stochastic-process/: index.html
docs/blog/tag/tag1/: index.html
docs/blog/tag/tag2/: index.html
docs/genindex/: index.html
docs/gp_sph/: index.html
docs/search/: index.html
docs/st_inhom/: index.html
source/: conf.py
source/.doctrees/: about.doctree  environment.pickle  first-post.doctree  gp_sph.doctree  index.doctree  second-post.doctree  test.doctree
src/: conf.py  gp_sph.md  index.rst  st_inhom.md
src/.doctrees/: environment.pickle  gp_sph.doctree  index.doctree  st_inhom.doctree
