[project]
name = "misgnros-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "misgnros",email = "igarashi.masanao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sphinx (>=8.1.3,<9.0.0)",
    "ablog (>=0.11.12,<0.12.0)",
    "myst-parser (>=4.0.0,<5.0.0)",
    "pydata-sphinx-theme (>=0.16.1,<0.17.0)",
    "sphinx-design (>=0.6.1,<0.7.0)",
    "sphinxcontrib-mermaid (>=1.0.0,<2.0.0)",
    "linkify-it-py (>=2.0.3,<3.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
