[project]
name = "misgnros-github-io"
version = "0.1.0"
description = ""
authors = [{ name = "misgnros", email = "igarashi.masanao@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "sphinx (<9.0.0)",
    "ablog (>=0.11.12,<0.12.0)",
    "myst-parser (>=4.0.0,<5.0.0)",
    "pydata-sphinx-theme (>=0.17.1)",
    "sphinx-design (>=0.6.1,<0.7.0)",
    "sphinxcontrib-mermaid (>=1.0.0,<2.0.0)",
    "linkify-it-py (>=2.0.3,<3.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "ruff>=0.14.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
